2008-04-28  Adam Roben  <aroben@apple.com>

        Fix some Windows build errors in COMPtr

        * platform/win/COMPtr.h: Explicitly name the WTF namespace when using
        HashTableDeletedValueType.

2008-04-28  Adam Roben  <aroben@apple.com>

        Fix some Windows build errors in FontPlatfomrData

        * platform/graphics/win/FontPlatformData.h: Removed the Deleted
        constructor and replaced it with a HashTableDeletedValueType
        constructor. Also added isHashTableDeletedValue() and
        hashTableDeletedFontValue().

2008-04-25  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        Fix run-webkit-tests --threading
        and provisionally fix <https://bugs.webkit.org/show_bug.cgi?id=18661>
        Proxy server issue in Sunday's Nightly

        Adjusted for JavaScriptCore changes: added a new member to ClassInfo objects, turned
        ClassInfo::propHashTable into a function, made getPropertyAttributes() take an ExecState pointer.

        * bindings/js/JSAudioConstructor.cpp:
        (WebCore::):
        * bindings/js/JSDOMWindowBase.cpp:
        (WebCore::):
        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::customGetOwnPropertySlot):
        * bindings/js/JSDOMWindowWrapper.cpp:
        (WebCore::):
        (WebCore::JSDOMWindowWrapper::getPropertyAttributes):
        * bindings/js/JSDOMWindowWrapper.h:
        * bindings/js/JSEventTargetBase.h:
        (WebCore::JSEventTargetPrototype::classInfo):
        * bindings/js/JSHTMLInputElementBase.cpp:
        (WebCore::):
        * bindings/js/JSHTMLOptionElementConstructor.cpp:
        (WebCore::):
        * bindings/js/JSHistoryCustom.cpp:
        (WebCore::JSHistory::customGetOwnPropertySlot):
        * bindings/js/JSImageConstructor.cpp:
        (WebCore::):
        * bindings/js/JSInspectedObjectWrapper.cpp:
        (WebCore::):
        * bindings/js/JSInspectorCallbackWrapper.cpp:
        (WebCore::):